# match_idle

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py  sdltest.cpp
cmake/: analyzers.cmake  settings.cmake  warnings.cmake
resources/: index.html
src/: assets.cpp  assets.hpp  board.cpp  board.hpp  main.cpp  match_window.cpp  match_window.hpp  piece.cpp  piece.hpp  window_recognition.cpp  window_recognition.hpp
tests/: CMakeLists.txt  match_window.cpp  window_recognition.cpp
tools/: CMakeLists.txt
tools/gems_of_war/: CMakeLists.txt  main.cpp  take_screenshot.cpp  treasure_hunt.cpp
